fixing alignment for skills container for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -70,8 +70,9 @@ body {
 @media screen and (max-width: 480px) {
     .skills_tab {
         top: 370px;
-        width: 20%;
+        width: 30%;
         height: 30px;
+        font-size: 20px;
     }
 }
 @media screen and (min-width: 481px) {
@@ -132,7 +133,7 @@ body {
     .skills_container {
         margin-top: 170px;
         height: auto;
-        width: 80%;
+        width: 75%;
     }
 }
 @media screen and (min-width: 481px) {
